# tessera

./: .gitignore  API_IMPLEMENTATION_REPORT.md  BATCH_PROCESSING_IMPLEMENTATION.md  CHRONOS_BOLT_IMPLEMENTATION.md  CODE_QUALITY_REPORT.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  LICENSE  OPTIMIZATION_PLAN.md  PHASE1_SUMMARY.md  PUBLICATION_SUMMARY.md  QUANTIZATION_API_IMPLEMENTATION.md  README.md  build.rs  clippy.toml  models.json  pyproject.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build-wheels.yml  ci.yml  test.yml
docs/: ARCHITECTURE_REVIEW.md  CHRONOS_BOLT_QUANTILES.md  COLPALI_SHAPE_FIX.md  COMPLETION_PLAN.md  PHASE_0_FINAL_REVIEW.md  PHASE_0_PLAN.md  PHASE_0_SUMMARY.md  PYENTRY_INDEX.md  PYENTRY_QUICK_REFERENCE.md  PYTHON_BINDINGS_COMPLETE.md  PYTHON_DEV_GUIDE.md  TESSERA_ARCHITECTURE_PYENTRY.md
docs/architecture/: model_registry.md
docs/archive/: API_QUICK_REFERENCE.md  API_REFACTORING_SUMMARY.md  COLPALI_CHANGES_SUMMARY.md  COLPALI_UPDATE_REPORT.md  COLPALI_VERIFICATION.md  COMPLETION_PLAN_UPDATE_SUMMARY.md  DENSE_EMBEDDINGS_TEST_REPORT.md  DENSE_ENCODER_IMPLEMENTATION.md  IMAGE_PROCESSOR_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MODULE_ARCHITECTURE.md  MODULE_SCAFFOLDING.md  PHASE_0_API_REFERENCE.md  PHASE_0_TASKS_0.2_0.3_SUMMARY.md  PHASE_1.2_COMPLETE.md  PHASE_1_4_COMPLETION.md  PHASE_1_EXECUTIVE_SUMMARY.txt  PHASE_1_VERIFICATION_REPORT.md  PHASE_3_1_COMPLETE.md  PHASE_3_1_TEST_IMPLEMENTATION.md  README.md  TASKS_0.4_0.5_SUMMARY.md  TASK_0_1_IMPLEMENTATION.md  VALIDATION_REPORT.md  VISION_ENCODER_REPORT.md  VISION_TEST_QUICK_START.md
docs/guides/: quick_start_registry.md
docs/models/: supported_models.md
docs/vision_board/: README.md  part1_multi_vector.md  part2_sparse.md  part3_timeseries.md  part4_exotic.md  part5_dense.md
examples/: basic_similarity.rs  batch_processing.rs  builder_api.rs  chronos_bolt_quantiles.rs  chronos_bolt_test_weights.rs  colpali_demo.rs  colpali_document_search.rs  colpali_multimodal.rs  colpali_pdf_demo.rs  colpali_vs_text.rs  comprehensive_demo.rs  dense_batch_search.rs  dense_encoder.rs  dense_matryoshka.rs  dense_semantic_search.rs  image_preprocessing.rs  model_registry_demo.rs  quantization_demo.rs  registry_similarity.rs  simple_api.rs  sparse_batch_demo.rs  sparse_interpretability.rs  sparse_semantic_search.rs  sparse_vs_dense.rs  test_colpali_queries.rs  test_colpali_shapes.rs  test_colpali_weights.rs  test_new_models.rs  timeseries_basic_forecasting.rs  timeseries_integration.rs  timeseries_multivariate.rs  timeseries_similarity_search.rs  unified_api.rs  unified_api_demo.rs  verify_colpali_shapes.rs  verify_normalization.rs  vision_embedding.rs
examples/fixtures/: README.md
examples/notebooks/: GUIDE.md  INDEX.md  QUICKREF.md  README.md  SUMMARY.md  embedding_comparison.py  run.sh  timeseries_forecasting.py
examples/python/: demo_colbert.py
src/: error.rs  lib.rs  main.rs
src/api/: builder.rs  embedder.rs  mod.rs
src/backends/: mod.rs
src/backends/burn/: backend.rs  encoder.rs  mod.rs
src/backends/candle/: device.rs  encoder.rs  mod.rs
src/bindings/: mod.rs  python.rs  wasm.rs
src/core/: embeddings.rs  mod.rs  similarity.rs  tokenizer.rs
src/encoding/: colbert.rs  dense.rs  mod.rs  sparse.rs  timeseries.rs  vision.rs
src/models/: config.rs  generated.rs  loader.rs  mod.rs  registry.rs
src/quantization/: binary.rs  int4.rs  int8.rs  mod.rs
src/timeseries/: config.rs  mod.rs  preprocessing.rs
src/timeseries/models/: chronos_bolt.rs  mod.rs
src/utils/: batching.rs  matryoshka.rs  mod.rs  normalization.rs  pdf.rs  pooling.rs  similarity.rs
src/vision/: mod.rs  preprocessing.rs
tests/: DENSE_EMBEDDINGS_TEST_SUMMARY.md  DENSE_TEST_EXAMPLES.md  TEST_STRUCTURE.txt  VISION_EMBEDDINGS_TEST_SUMMARY.md  batch_processing_test.rs  dense_embeddings_test.rs  quantization_api_test.rs  sparse_embeddings_test.rs  test_dense_encoder.rs  test_jina_code.rs  vision_embeddings_test.rs
tests/python/: test_python_bindings.py
