[package]
name = "tessera"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tessera"
path = "src/main.rs"

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
python = []  # PyO3 bindings (TODO: add pyo3 dependency when implementing)
wasm = []    # WebAssembly bindings (TODO: add wasm-bindgen when implementing)

[dependencies]
anyhow = "1.0.100"
burn = { version = "0.18.0", features = ["ndarray"] }
burn-ndarray = "0.18.0"
burn-wgpu = "0.18.0"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
clap = { version = "4.5.49", features = ["derive"] }
hf-hub = "0.4.3"
ndarray = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokenizers = "0.22.1"

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints.rust]
# Note: unsafe is allowed in specific backend code for FFI (candle, Metal)
# unsafe_code = "forbid"
missing_docs = "warn"   # Warn on missing documentation

[lints.clippy]
# Use warn level to allow build but highlight issues
all = "warn"
pedantic = "warn"
nursery = "warn"
