[package]
name = "tessera-embeddings"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Multi-paradigm embedding library: ColBERT, dense, sparse, vision-language, and time series models"
repository = "https://github.com/tomWhiting/tessera"
homepage = "https://github.com/tomWhiting/tessera"
documentation = "https://docs.rs/tessera-embeddings"
keywords = ["embeddings", "colbert", "semantic-search", "ml", "nlp"]
categories = ["science", "text-processing"]

[lib]
name = "tessera"  # Keep as "tessera" so users can `use tessera::...`
crate-type = ["cdylib", "rlib"]  # cdylib for Python, rlib for Rust

[[bin]]
name = "tessera"
path = "src/main.rs"

[features]
default = ["pdf"]  # PDF support enabled by default for ColPali document processing
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
pdf = ["pdf2image"]  # PDF rendering support for ColPali document processing
python = ["dep:pyo3", "dep:numpy", "timeseries"]  # PyO3 bindings with NumPy support (includes timeseries)
wasm = []    # WebAssembly bindings (TODO: add wasm-bindgen when implementing)
timeseries = []  # Time series forecasting with Chronos Bolt (requires candle fork with T5 hidden states)

[dependencies]
anyhow = "1.0.100"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
clap = { version = "4.5.49", features = ["derive"] }
hf-hub = "0.4.3"
ndarray = "0.16.1"
safetensors = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokenizers = "0.22.1"

# Vision/Image Processing (Phase 3.1 - ColPali)
image = "0.25"              # Image loading, format conversion, and resizing for vision models
imageproc = "0.25"          # Advanced image processing operations (filtering, transformations)
pdf2image = { version = "0.1.2", optional = true }  # PDF to image rendering (uses Poppler)
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
numpy = { version = "0.22", optional = true }

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints.rust]
# Note: unsafe is allowed in specific backend code for FFI (candle, Metal)
# unsafe_code = "forbid"
missing_docs = "warn"   # Warn on missing documentation

[lints.clippy]
# Use warn level to allow build but highlight issues
all = "warn"
pedantic = "warn"
nursery = "warn"

# Patch candle to use local fork with T5 hidden states support
[patch.crates-io]
# Use fork with T5 hidden states exposed for Chronos Bolt
candle-core = { git = "https://github.com/tomWhiting/candle.git", rev = "f295c42c" }
candle-nn = { git = "https://github.com/tomWhiting/candle.git", rev = "f295c42c" }
candle-transformers = { git = "https://github.com/tomWhiting/candle.git", rev = "f295c42c" }

# Timeseries examples require the timeseries feature
[[example]]
name = "timeseries_basic_forecasting"
required-features = ["timeseries"]

[[example]]
name = "timeseries_similarity_search"
required-features = ["timeseries"]

[[example]]
name = "timeseries_integration"
required-features = ["timeseries"]

[[example]]
name = "timeseries_multivariate"
required-features = ["timeseries"]

[[example]]
name = "chronos_bolt_test_weights"
required-features = ["timeseries"]

[[example]]
name = "chronos_bolt_quantiles"
required-features = ["timeseries"]
